--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,7 @@
 name: Test
 on:
   push:
+  pull_request:
 concurrency: 
   group: build-${{ github.ref }}
   cancel-in-progress: true
@@ -8,6 +9,7 @@ jobs:
   build:
     name: run tests
     runs-on: ubuntu-latest
+    timeout-minutes: 4
     steps:
       - uses: actions/checkout@v3
         with:
