--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,7 @@ jobs:
           cache: npm
       - name: install
         run: npm ci
+      - name: build
+        run: npm run build
       - name: test
         run: npm test
